# combopt-zero

./: .clang-format  .gitignore  LICENSE.md  readme.md  requirements.txt
docker/: config.sh  eval.sh  install.sh  train.sh
feedback-set/: evaluate.py  model_updater.py  single_data_generator.py  single_learner.py
feedback-set/lib/: CMakeLists.txt  lib.py
feedback-set/lib/include/: env.h  graph.h  libtest.h  pgnn.h  policy.h  s2v.h  train_batch.h
feedback-set/lib/src/lib/: env.cpp  mcts.cpp  mock_policy.cpp  util.cpp
independent-set/: evaluate.py  model_updater.py  single_data_generator.py  single_learner.py
independent-set/lib/: CMakeLists.txt  lib.py
max-clique/: config.sh  evaluate.py  model_updater.py  script_generator.py  single_data_generator.py  single_learner.py
max-clique/lib/: CMakeLists.txt  lib.py
max-cut/: config.sh  evaluate.py  model_updater.py  script_eraser.py  single_data_generator.py  single_learner.py
max-cut/lib/: CMakeLists.txt  (+1 more)
test_graphs/: ba1000_5  ba100_5  ba200_5  ba5000_5  bio-SC-LC  bio-yeast  citeseer  cora  dimacs-frb30-15-1  dimacs-frb50-23-1  er1000_5  er100_15  er20  er200_10  er5000_1  grid_10_10  grid_10_50  grid_1_100  grid_50_50  grid_70_70  path1000  pubmed  regular1000_d10  regular1000_d5  regular1000_d50  regular100_d10  regular100_d2  regular100_d5  road-minnesota  rt_damascus  soc-wiki-vote  socfb-bowdoin47  star100  star1000  tree100  tree1000  tree20  web-edu  web-spam  ws1000_k10_p10  (+10 more)
vertex-cover/: config.sh  evaluate.py  model_updater.py  single_data_generator.py  single_learner.py  train_controller.py
(+46 files in other folders)
